--- a/.github/workflows/automate_pr_msg.yml
+++ b/.github/workflows/automate_pr_msg.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Generate PR Description
         env:
-          FAST_API_URL:  https://ab16-129-210-115-231.ngrok-free.app/generate  # Replace with your actual ngrok URL
+          FAST_API_URL:  https://3709-2601-647-4601-2b0-5c68-db7e-9406-2fec.ngrok-free.app/generate  # Replace with your actual ngrok URL
         run: |
           echo " Running main.py with diff_content.txt"
           python deepseek-r1/main.py "diff_content.txt" "${{ github.event.pull_request.number }}"
